app/common/styles.css
/* ... */
td th .square {
    aspect-ratio: 1 / 1;
}

table.nihilist {
    text-align: center;
}

table.nihilist td {
    width: 33px;
    padding: 0;
}

table.nihilist tr.bar td {
    border-top: thin solid;
}

.solve th {
    text-align: center;
}

table.nihilist tr.ans {
    background-color: yellow !important;
}

table.nihilist tr.minor {
    font-style: italic;
    font-weight: normal;
    font-family: 'Courier New', Courier, monospace;
}

table.nihilist tr.solve {
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
}

tr.wrong {
    background-color: lightcoral !important;
}

.ones {
    background-color: rgb(155, 101, 255);
}

table.bacon td {
    padding: 0;
    font-size: 18pt;
    line-height: 100%;
}

table.bacon td.b {
    font-weight: normal;
}
table.bacon td.b img {
    max-width: none;
}
table.bacon tbody,
table.bacon tbody tr {
    border: none;
}

.BACON.TOSOLVE,
.BACON.TOSOLVE2,
.BACON.TOSOLVEQ,
.BACON.TOANSWER {
    font-size: 18pt;
}
.BACON.TOSOLVEQ {
    margin-bottom: 4rem;
}

.TOSOLVEQ {
    margin-bottom: 6rem;
}

.TOANSWER,
.TOANSWERK {
    margin-bottom: 16pt;
}

.TOANSWER {
    background-color: yellow !important;
}

.TOSOLVECLICK,
.TOawcLICK {
    background-color: #74a4eb;
}

.mismatch {
    font-weight: normal;
}
.mismatch .b {
    font-weight: bold;
    color: darkred;
}
.mismatch .g {
    color: green;
}
.mismatch .formula {
    margin-left: 10px;
    font-style: italic;
    color: darkslategray;
    background-color: lightyellow;
}
.match {
    font-weight: bold;
    color: green;
}

.rtoggle-3:after {
    content: '\2714'; /* Heavy Checkmark */
}
.rtoggle-2:after {
    content: '\2718'; /* Heavy Ballot */
    color: white;
}
.rtoggle-1:after {
    content: '?';
}
.rtoggle-0 {
    background-color: transparent;
}
.rtoggle-1 {
    background-color: grey;
}
.rtoggle-2 {
    background-color: black;
}
.rtoggle-3 {
    background-color: green;
}

div.sols {
    margin-bottom: 10px;
}
div.sols .h {
    font-weight: bold;
    margin-right: 10px;
}
div.sols .sol {
    font-family: 'Courier New', Courier, monospace;
}

#qtext.richtext,
#texta.richtext,
#textb.richtext {
    border: 1px solid #cacaca;
}

table.contact,
table.consonantline {
    margin-left: auto;
    margin-right: auto;
    border-collapse: collapse;
}
table.contact th {
    border-bottom: 1px solid black;
    text-align: center;
}
table.consonantline th {
    text-align: center;
    padding: 0.1rem;
}
table.consonantline th.c {
    border-bottom: 1px solid black;
    font-family: 'Courier New', Courier, monospace;
    text-align: center;
}

table.contact td,
table.consonantline td {
    font-family: 'Courier New', Courier, monospace;
    padding: 0.1rem;
}
table.contact td.prev {
    text-align: right;
}

table.consonantline td.prev {
    text-align: right;
    border-right: 1px solid black;
}
table.contact td.tlet {
    border-left: 1px solid black;
    border-right: 1px solid black;
}

.references a,
.references a:visited {
    text-decoration: none;
}

.references a {
    color: #b54b23;
}

.references h2 {
    clear: both;
    color: #b54b23;
    font: 700 35px/1em 'Roboto', sans-serif;
    padding-bottom: 10px;
    text-transform: uppercase;
}

/* Style Definitions */

.references * {
    font-family: Arial, Helvetica, sans-serif;
}

.references a,
.references a:visited {
    text-decoration: none;
}

.references a[href] {
    color: #b54b23;
}

.references h3 {
    color: #b54b23;
    font-size: 15px;
    font-weight: 700;
    font-family: 'Roboto', sans-serif;
    padding-bottom: 5px;
    padding-top: 10px;
    text-transform: uppercase;
    margin-bottom: 5px;
}

.references .a {
    font-family: Arial, Helvetica, sans-serif;
    margin-left: 30px;
}
.references .c {
    font-family: Arial, Helvetica, sans-serif;
    margin-left: 60px;
}
.references .i {
    color: #b54b23;
    font-size: 25px;
    font-weight: 700;
    font-family: 'Roboto', sans-serif;
    padding-bottom: 10px;
    text-transform: uppercase;
    margin: 10px;
}
.references .n {
    color: black;
    font-style: italic;
    margin-left: 5px;
}
.references .r {
    margin-left: 5px;
}
.references .h {
    font-style: italic;
    color: #b54b23;
    font-size: 15px;
    padding-left: 10px;
}
.references .w {
    font-weight: bold;
    padding-left: 10px;
}
.references .u {
    text-decoration: overline;
}

table.vfact,
table.found,
table.vdist {
    font-family: 'Courier New', Courier, monospace;
    border-collapse: collapse;
    margin-right: 10px;
    border: 1px solid black;
}

table.combine td {
    vertical-align: top;
}

table.vdist th,
table.vfact th,
table.found th {
    text-align: center;
    background-color: #eaeaea;
    padding-left: 10px;
    padding-right: 10px;
}

table.vdist td,
table.vfact td {
    border: 1px solid grey;
    text-align: right;
}

table.found tr td:nth-child(even),
table.found tr th:nth-child(even) {
    border-right: 1px solid grey;
    text-align: left;
    border-bottom: 1px solid grey;
    padding-right: 10px;
}

table.found tr td:nth-child(odd),
table.found tr th:nth-child(odd) {
    border-left: 1px solid grey;
    border-right: 1px dotted grey;
    text-align: right;
    border-bottom: 1px solid grey;
}
.button.rounded,
button.rounded {
    border-radius: 0.625rem !important;
}

.centered {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

/* .button-group.round,
.input-group-button .round {
    border-radius: 0.625rem !important;
  overflow: hidden;
} */

.button-group.round.shrink a:first-child {
    border-radius: 0.625rem 0 0 0.625rem;
}
.button-group.round.shrink a:last-child {
    border-radius: 0 0.625rem 0.625rem 0rem;
}

.button-group .button {
    margin-right: 0.2rem;
}
.mobile-app-toggle {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    border: 1px solid #1779ba;
    border-radius: 0.625rem;
    overflow: hidden;
    margin-bottom: 1rem;
}
/* ... */

